# kinect

./: .gitignore  CMakeLists.txt  KinectDevice.cpp  KinectDevice.h  KinectHandler.cpp  KinectHandler.h  README.md  main.cpp
